fix: [code-2105]: fix issue in branch listing on element wrap (#2212)
* fix: [code-2105]: fix issue in branch listing on element wrap

--- a/web/src/components/BranchProtection/BranchProtectionListing.module.scss
+++ b/web/src/components/BranchProtection/BranchProtectionListing.module.scss
@@ -78,7 +78,7 @@
 }
 
 .widthContainer {
-  max-width: calc(100% - 100px);
+  max-width: calc(100% - 150px);
   overflow-x: hidden;
   display: flex;
   flex-wrap: wrap;
